# polars-quant

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  ROADMAP.md  main.py  mkdocs.yml  pyproject.toml  test.parquet
.github/workflows/: deploy.yml
docs/: api.md  index.md
docs/start/: features.md  installation.md  usage.md
example/: sz000001.parquet  sz000002.parquet  sz000004.parquet  test.py
python/polars_quant/: __init__.py  polars_quant.pyi  qtalib.py  talib.py  talib.pyi
python/polars_quant/backtest/: __init__.py  sequential.py
python/polars_quant/talib/: __init__.py  cycle.py  momentum.py  overlap.py  pattern.py  price.py  volatility.py  volume.py
site/: 404.html  index.html  sitemap.xml
src/: backtest.rs  data.rs  factor.rs  lib.rs  qbacktest.rs  qbacktrade.rs  qstock.rs  qtalib.rs  selector.rs  strategy.rs  talib.rs
src/backtest/: metrics.rs  sequential.rs  vectorized.rs
src/polars_quant/: __init__.py  backtrade.py  signal.py  talib.py
src/talib/: cycle.rs  mod.rs  momentum.rs  overlap.rs  pattern.rs  price.rs  volatility.rs  volume.rs
tests/: __init__.py  conftest.py  talib_test_utils.py
tests/backtest/: test_sequential.py  test_vector.py
tests/talib/: test_cycle.py  test_momentum.py  test_overlap.py  test_pattern.py  test_price.py  test_volatility.py  test_volume.py
