[package]
name = "polars_quant"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_quant"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
polars = { version = "0.50.0", features = ["full"] }
pyo3 = { version = "0.25.1", features = ["abi3-py39", "extension-module"] }
pyo3-polars = "0.23.1"
rayon = "1.11.0"
reqwest = "0.12.23"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
