[package]
name = "polars_quant"
version = "1.0.0"
edition = "2024"

[lib]
name = "polars_quant"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14"
polars = { version = "0.53", default-features = false}
pyo3 = { version = "0.27", features = ["abi3-py310", "extension-module"] }
pyo3-polars = "0.26"
rayon = "1"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

