[package]
name = "polars_quant"
version = "1.0.0"
edition = "2024"

[lib]
name = "polars_quant"
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7"
itertools = "0.14"
polars = { version = "0.53", default-features = false, features = ["dtype-struct"] }
pyo3 = { version = "0.27", features = ["abi3-py310", "extension-module"] }
pyo3-polars = { version = "0.26", features = ["derive"] }
serde = { version = "1", features = ["serde_derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"

