[project]
name = "polars-quant"
description = "Blazingly Fast Polars Quant Tool"
readme = "README.md"
authors = [
    { name = "Firstastor", email = "23150126@hdu.edu.cn" }
]
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "polars>=1.38.1",
    "pyarrow>=23.0.0",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.uv]
package = false
